--- a/portfolio.html
+++ b/portfolio.html
@@ -11,130 +11,138 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link 
+      rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
   </head>
   <body>
     <header class="header">
-      <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
-      <nav>
-        <ul class="site-nav mark">
-          <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+      <div class="container main-nav">
+        <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
+        <nav>
+          <ul class="site-nav mark">
+            <li class="item"><a class="link" href="./index.html">Studio</a></li>
+            <li class="item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+            <li class="item"><a class="link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <ul class="auth-nav mark">
+          <li class="item"><a class="link" href="">info@devstudio.com</a></li>
+          <li class="item"><a class="link" href="">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
-      <ul class="auth-nav mark">
-        <li><a class="link" href="">info@devstudio.com</a></li>
-        <li><a class="link" href="">+11 (000) 111-11-11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <section>
-        <h2>Filter</h2>
-        <ul class="mark">
-          <li><button class="btn-secondary" type="button">All</button></li>
-          <li><button class="btn-secondary" type="button">Web Site</button></li>
-          <li><button class="btn-secondary" type="button">App</button></li>
-          <li><button class="btn-secondary" type="button">Design</button></li>
-          <li>
-            <button class="btn-secondary" type="button">Marketing</button>
-          </li>
-        </ul>
-        <h2>Our portfolio</h2>
-        <ul class="projects-list mark">
-          <li>
-            <img
-              src="./images/banking.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Banking App Interface Concept</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Meditation App</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxiservice.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Taxi Service</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Screen Illustrations</h3>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Online Courses</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/instaconcept.jpg"
-              alt="Instagram Stories"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Instagram Stories Concept</h3>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/organic.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Organic Food</h3>
-            <p class="text">Web Site</p>
-          </li>
-          <li>
-            <img
-              src="./images/coffee.jpg"
-              alt="Coffee"
-              width="360"
-              height="300"
-            />
-            <h3 class="title">Fresh Coffee</h3>
-            <p class="text">Web Site</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="hidden">Filter</h2>
+          <ul class="filter-list mark">
+            <li class="item"><button class="btn-secondary" type="button">All</button></li>
+            <li class="item"><button class="btn-secondary" type="button">Web Site</button></li>
+            <li class="item"><button class="btn-secondary" type="button">App</button></li>
+            <li class="item"><button class="btn-secondary" type="button">Design</button></li>
+            <li class="item">
+              <button class="btn-secondary" type="button">Marketing</button>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <h2 class="hidden">Our portfolio</h2>
+          <ul class="projects-list mark">
+            <li>
+              <img
+                src="./images/banking.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Banking App Interface Concept</h3>
+              <p class="text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Cashless Payment</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/meditation.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Meditation App</h3>
+              <p class="text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/taxiservice.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Taxi Service</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Screen Illustrations</h3>
+              <p class="text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Online Courses</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/instaconcept.jpg"
+                alt="Instagram Stories"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Instagram Stories Concept</h3>
+              <p class="text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/organic.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Organic Food</h3>
+              <p class="text">Web Site</p>
+            </li>
+            <li>
+              <img
+                src="./images/coffee.jpg"
+                alt="Coffee"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Fresh Coffee</h3>
+              <p class="text">Web Site</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
