--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button type="button" class="btn-primery">Order Service</button>
       </section>
       <!--Our advantages-->
-      <section class="section">
+      <section class="section-not-padding">
         <div class="container">
           <h2 class="section-title hidden">Our advantages</h2>
           <ul class="features-list mark">
@@ -81,19 +81,23 @@
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-list mark">
-            <li>
+            <li class="item">
               <img
                 src="./images/img1.jpg"
                 alt="Developing"
                 width="360"
                 height="300"
               />
+            </li>
+            <li class="item">
               <img
                 src="./images/img2.jpg"
                 alt="Prototyping"
                 width="360"
                 height="300"
               />
+            </li>
+            <li class="item">
               <img
                 src="./images/img3.jpg"
                 alt="Design"
@@ -109,7 +113,7 @@
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="employees-list mark">
-            <li>
+            <li class="item">
               <img
                 src="./images/1proddesigner.jpg"
                 alt="Product Designer"
@@ -119,7 +123,7 @@
               <h3 class="title">Mark Guerrero</h3>
               <p class="text">Product Designer</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/2developer.jpg"
                 alt="Frontend Developer"
@@ -129,7 +133,7 @@
               <h3 class="title">Tom Ford</h3>
               <p class="text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/3marketing.jpg"
                 alt="Marketing"
@@ -139,7 +143,7 @@
               <h3 class="title">Camila Garcia</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/4designer.jpg"
                 alt="UI Designer"
