--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="section-portfolio">
         <div class="container">
           <h2 class="hidden">Filter</h2>
           <ul class="filter-list mark">
@@ -51,7 +51,7 @@
         <div class="container">
           <h2 class="hidden">Our portfolio</h2>
           <ul class="projects-list mark">
-            <li>
+            <li class="item">
               <img
                 src="./images/banking.jpg"
                 alt="Banking App"
@@ -61,7 +61,7 @@
               <h3 class="title">Banking App Interface Concept</h3>
               <p class="text">App</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/payment.jpg"
                 alt="Cashless Payment"
@@ -71,7 +71,7 @@
               <h3 class="title">Cashless Payment</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/meditation.jpg"
                 alt="Meditation App"
@@ -81,7 +81,7 @@
               <h3 class="title">Meditation App</h3>
               <p class="text">App</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/taxiservice.jpg"
                 alt="Taxi Service"
@@ -91,7 +91,7 @@
               <h3 class="title">Taxi Service</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/illustrations.jpg"
                 alt="Screen Illustrations"
@@ -101,7 +101,7 @@
               <h3 class="title">Screen Illustrations</h3>
               <p class="text">Design</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/courses.jpg"
                 alt="Online Courses"
@@ -111,7 +111,7 @@
               <h3 class="title">Online Courses</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/instaconcept.jpg"
                 alt="Instagram Stories"
@@ -121,7 +121,7 @@
               <h3 class="title">Instagram Stories Concept</h3>
               <p class="text">Design</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/organic.jpg"
                 alt="Organic Food"
@@ -131,7 +131,7 @@
               <h3 class="title">Organic Food</h3>
               <p class="text">Web Site</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/coffee.jpg"
                 alt="Coffee"
@@ -146,11 +146,13 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
-      <p class="text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+      <div class="container">
+        <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
+        <p class="text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>  
+      </footer>
   </body>
 </html>
