Updated file css

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Banking App Interface Concept</h3>
-              <p class="text">App</p>
+              <div class="project-list-box">
+                <h3 class="title">Banking App Interface Concept</h3>
+                <p class="text">App</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -68,9 +70,11 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Cashless Payment</h3>
-              <p class="text">Marketing</p>
-            </li>
+              <div class="project-list-box">
+                <h3 class="title">Cashless Payment</h3>
+                <p class="text">Marketing</p>
+              </div>
+              </li>
             <li class="item">
               <img
                 src="./images/meditation.jpg"
@@ -78,8 +82,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Meditation App</h3>
-              <p class="text">App</p>
+              <div class="project-list-box">
+                <h3 class="title">Meditation App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -88,8 +94,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Taxi Service</h3>
-              <p class="text">Marketing</p>
+              <div class="project-list-box">
+                <h3 class="title">Taxi Service</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -98,8 +106,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Screen Illustrations</h3>
-              <p class="text">Design</p>
+              <div class="project-list-box">
+                <h3 class="title">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -108,8 +118,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Online Courses</h3>
-              <p class="text">Marketing</p>
+              <div class="project-list-box">
+                <h3 class="title">Online Courses</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -118,8 +130,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Instagram Stories Concept</h3>
-              <p class="text">Design</p>
+              <div class="project-list-box">
+                <h3 class="title">Instagram Stories Concept</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -128,8 +142,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Organic Food</h3>
-              <p class="text">Web Site</p>
+              <div class="project-list-box">
+                <h3 class="title">Organic Food</h3>
+                <p class="text">Web Site</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -138,8 +154,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="title">Fresh Coffee</h3>
-              <p class="text">Web Site</p>
+              <div class="project-list-box">
+                <h3 class="title">Fresh Coffee</h3>
+                <p class="text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
