--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+              <div class="box">
+                <h3 class="title">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -130,8 +132,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+              <div class="box">
+                <h3 class="title">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -140,8 +144,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+              <div class="box">
+                <h3 class="title">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -150,8 +156,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="title">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <div class="box">
+                <h3 class="title">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
